# Furdevs-Chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
chess/: CMakeLists.txt  chess_class.cpp  chess_class.hpp
cmake/: dependency.cmake
console/: CMakeLists.txt  chess_tui.cpp  chess_tui.hpp  main.cpp  menu.cpp  menu.hpp  visual.cpp  visual.hpp
dependencies/: CMakeLists.txt
tests/: CMakeLists.txt  chess_test.cpp
